<resources>
    <string name="app_name">AuroraHub</string>
    <string name="aurora">Aurora</string>
    <string name="phrase_1">Embark on a journey of balanced living</string>
    <string name="phrase_2">Illuminate your life’s patterns</string>
    <string name="prompt_email">Email</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_select_start_time">Click to select Start Time</string>
    <string name="click_to_select_finish_time">Click to select Finish Time</string>

    <string-array name="log_activity_patterns">
        <item>log {$activityName} to Aurora for {$duration}</item>
        <item>record {$activityName} to Aurora for {$duration}</item>
        <!-- Add more patterns as needed -->
    </string-array>
</resources>