<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aurora"
            android:layout_width="360dp"
            android:layout_height="116dp"
            android:gravity="center_horizontal|top"
            android:text="@string/aurora"
            android:textAppearance="@style/aurora"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/embark_on_a"
            android:layout_width="320dp"
            android:layout_height="37dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/phrase_1"
            android:textAppearance="@style/under_text_phrase" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="32dp"

            android:autofillHints="@string/prompt_email"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/prompt_email"
            android:textColor="@color/gray"
            android:inputType="textEmailAddress"
            android:singleLine="false"
            />
        <EditText
            android:id="@+id/password_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/gray"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="40dp"
            android:textAppearance="@style/under_text_phrase"
            android:text="@string/action_sign_in_short"


            android:background="@drawable/gradient_background"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"


            />


    </LinearLayout>

</RelativeLayout>